// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContinueTradeSlider renders correctly 1`] = `
<ConfirmSlider
  disabled={false}
  iconId="arrowRightCircle"
  label1="continue trade"
  onConfirm={[Function]}
/>
`;

exports[`ContinueTradeSlider renders correctly when no sell offer is known 1`] = `
<ConfirmSlider
  disabled={true}
  iconId="arrowRightCircle"
  label1="continue trade"
  onConfirm={[Function]}
/>
`;
